[package]
name = "rmp-serde-tests"
version = "0.11.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
build = "build.rs"

[features]
default = ["serde_derive"]
with-syntex = ["serde_codegen"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
rmp = "0.8"
rmp-serde = "0.11"
serde = "^0.8"
serde_derive = { version = "^0.8", optional = true }
