[package]
name = "rmp-serde-tests"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
build = "build.rs"
publish = false

[features]
default = ["serde_derive"]
with-syntex = ["serde_codegen"]

[build-dependencies]
serde_codegen = { version = "0.9", optional = true }

[dependencies]
rmp = "0.8"
rmp-serde = { path = "../rmp-serde", version = "*" }
serde = "^0.9"
serde_derive = { version = "^0.9", optional = true }
