[package]
name = "rmp-serde"
version = "1.3.1"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde support for MessagePack"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serde"
readme = "README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]
edition = "2024"
rust-version = "1.85"

[package.metadata.release]
tag-prefix = "{{crate_name}}/"

[dependencies]
serde = "1.0.228"
rmp = { version = "0.8.14", path = "../rmp" }

[dev-dependencies]
rmpv = { path = "../rmpv" }
serde_bytes = "0.11.19"
serde = { version = "1.0.228", features = ["derive"] }

[badges]
maintenance = { status = "looking-for-maintainer" }
