[package]
name = "rmp-serialize"
version = "0.8.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Rust Serialize bindings for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serialize"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serialization"]

[dependencies]
rmp = "0.8"
rustc-serialize = "0.3"
