[package]
name = "rmp-value"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Value variant for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://3hren.github.io/msgpack-rust/rmp/index.html"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serialization"]

[features]
with-serde = ["serde"]

[dependencies]
rmp = { version = "^0.8", path = "../rmp" }
serde = { version = "^0.8", optional = true }
