[package]
name = "rmp"
version = "0.8.14"
authors = ["Evgeny Safronov <division494@gmail.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT"
description = "Pure Rust MessagePack serialization implementation"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp"
readme = "README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]
edition = "2021"

[dependencies]
byteorder = { version = "1.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

[features]
default = ["std"]
std = ["byteorder/std", "num-traits/std"]

[[example]]
name = "inspect"
required-features = ["std"]

[dev-dependencies]
quickcheck = "1.0.2"

[package.metadata.release]
tag-prefix = "{{crate_name}}/"

[badges]
maintenance = { status = "looking-for-maintainer" }
