[package]
name = "rmpv-tests"
version = "0.0.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde = "1.0.118"
serde_derive = "1.0.118"
rmp-serde = { version = "0.15", path = "../rmp-serde" }
rmpv = { features = ["with-serde"], path = "../rmpv" }

[dev-dependencies]
serde_bytes = "0.11.2"
