[package]
name = "rmpv-tests"
version = "0.0.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
publish = false
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = { path = "../rmp-serde" }
rmpv = { features = ["with-serde"], path = "../rmpv" }

[dev-dependencies]
serde_bytes = "0.11.19"
