[package]
name = "rmpv"
version = "1.3.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Value variant for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmpv"
readme = "README.md"
keywords = ["msgpack", "MessagePack", "serialization"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.70"

[features]
with-serde = ["serde", "serde_bytes"]

[dependencies]
serde_bytes = { version = "0.11.5", optional = true }
rmp = { version = "0.8.14", path = "../rmp" }
num-traits = "0.2.14"
serde = { version = "1.0.197", optional = true }

[dev-dependencies]
quickcheck = "1.0.2"

[package.metadata.release]
tag-prefix = "{{crate_name}}/"

[badges]
maintenance = { status = "looking-for-maintainer" }
