[package]
name = "rmpv"
version = "1.3.1"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Decoding/Encoding MessagePack values without schema"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmpv"
readme = "README.md"
keywords = ["msgpack", "MessagePack", "serialization"]
categories = ["encoding"]
edition = "2024"
rust-version = "1.85"

[features]
with-serde = ["serde", "serde_bytes"]

[dependencies]
serde_bytes = { version = "0.11.19", optional = true }
rmp = { version = "0.8.14", path = "../rmp" }
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"

[package.metadata.release]
tag-prefix = "{{crate_name}}/"

[badges]
maintenance = { status = "looking-for-maintainer" }
